name:                nsv
version:             0.1.0.0
synopsis:            displays random posts
description:         Please see README.md
homepage:            https://github.com/narrative/nsv#readme
license:             BSD3
license-file:        LICENSE
author:              Erik Stevenson
maintainer:          eriknstevenson@gmail.com
copyright:           2016 Erik Stevenson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nsv
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Database
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , acid-state
                     , aeson
                     , http-types
                     , lens
                     , lens-aeson
                     , lucid
                     , mtl
                     , random
                     , safecopy
                     , scotty
                     , text
                     , wai-extra
                     , wai-middleware-static
                     , warp
                     , wreq
